--- a/themes/hugo-coder/layouts/partials/posts/disqus.html
+++ b/themes/hugo-coder/layouts/partials/posts/disqus.html
@@ -1,3 +1,16 @@
-{{- if and (not (eq (.Site.DisqusShortname | default "") "")) (eq (.Params.disable_comments | default false) false) -}}
-  {{ template "_internal/disqus.html" . }}
-{{- end -}}
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+
+(function() {
+      // Please don't inject Disqus on localhost
+      if (window.location.hostname == "localhost")
+                return;
+
+      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+      var disqus_shortname = '{{ .Site.DisqusShortname }}';
+      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com/" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
